--- a/public/style.css
+++ b/public/style.css
@@ -545,7 +545,130 @@ body.loaded #loadingScreen {
         font-weight: bold;
     }
 }
-    
+
+ /* Styles for Projects Section */
+ #projects {
+    padding: 60px 0;
+    background-color: #222;
+    text-align: center;
+}
+
+#projects h2 {
+    font-size: 2em;
+    margin-bottom: 40px;
+}
+
+.projects-container {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
+
+.project-card {
+    background-color: #1a1616;
+    border: 1px solid #ddd;
+    padding: 20px;
+    width: 280px;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.project-card:hover {
+    transform: scale(1.05); 
+    background-color: rgb(68, 66, 64);
+}
+
+.project-card img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.project-card h3 {
+    margin-top: 20px;
+    font-size: 1.5em;
+    color: #fff;
+}
+
+.project-card p {
+    font-size: 1em;
+    color: #fff;
+    margin-bottom: 15px;
+}
+
+.btn {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #0056b3;
+}
+
+/* Popup Styles */
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1000;
+    overflow: hidden; /* Ensure the background doesn't scroll */
+}
+
+.popup-content {
+    position: relative;
+    background: #6610f2;
+    width: 90%;
+    max-width: 600px;
+    max-height: 80%; /* Restrict the popup height */
+    margin: auto;
+    top: 50%; /* Start vertically centered */
+    transform: translateY(-50%); /* Adjust for vertical centering */
+    overflow-y: auto; /* Enable scrolling for overflowing content */
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.popup-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.popup-header h3 {
+    margin: 0;
+    color: seashell;
+}
+
+.close-btn {
+    cursor: pointer;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.popup-body {
+    margin-top: 20px;
+}
+
+.popup-body p{
+    padding: 16px;
+    color: white;
+}
+
+.popup-body a{
+    color: cyan;
+}
 
 
 
