--- a/public/style.css
+++ b/public/style.css
@@ -410,7 +410,7 @@ body.loaded #loadingScreen {
         flex-direction: column;
         align-items: center;
         padding: 60px 10px;
-      background: linear-gradient(120deg, #07292d, #1a1616);
+     background: linear-gradient(120deg, #065963, #1a1616);
         color: #fff;
     }
     .profile-pic img {
