--- a/public/style.css
+++ b/public/style.css
@@ -444,7 +444,7 @@ body.loaded #loadingScreen {
         padding: 12px;
         font-size: 1rem;
         color: #fff;
-        background-color: #6610f2;
+        background-color: #065963;
         border: none;
         border-radius: 5px;
         transition: background-color 0.3s ease;
