--- a/public/style.css
+++ b/public/style.css
@@ -370,7 +370,7 @@ body.loaded #loadingScreen {
         padding: 15px;
         background-color: #fff;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        background-color: black;
+        background-color: rgb(0, 0, 0);
     }
     .header-content {
         flex-direction: column;
@@ -386,15 +386,15 @@ body.loaded #loadingScreen {
         border-radius: 10px;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     }
-      nav ul li a{
+   nav ul li a{
     color: white;
    }
 
     
     nav ul.active {
         display: flex; /* Display when active */
-        background-color: black;
-         margin-left: 9px;
+        background-color: rgb(0, 0, 0);
+       margin-left: 9px;
     gap: 2px;
     }
     .hamburger {
@@ -410,7 +410,7 @@ body.loaded #loadingScreen {
         flex-direction: column;
         align-items: center;
         padding: 60px 10px;
-     background: linear-gradient(120deg, #065963, #1a1616);
+        background: linear-gradient(120deg, #007bff, #6610f2);
         color: #fff;
     }
     .profile-pic img {
@@ -444,7 +444,7 @@ body.loaded #loadingScreen {
         padding: 12px;
         font-size: 1rem;
         color: #fff;
-        background-color: #065963;
+        background-color: #6610f2;
         border: none;
         border-radius: 5px;
         transition: background-color 0.3s ease;
@@ -632,7 +632,7 @@ body.loaded #loadingScreen {
 
 .popup-content {
     position: relative;
-    background: #6610f2;
+   background: #fff;
     width: 90%;
     max-width: 600px;
     max-height: 80%; /* Restrict the popup height */
@@ -653,7 +653,7 @@ body.loaded #loadingScreen {
 
 .popup-header h3 {
     margin: 0;
-    color: seashell;
+   color: #23005d;
 }
 
 .close-btn {
@@ -668,14 +668,14 @@ body.loaded #loadingScreen {
 
 .popup-body p{
     padding: 16px;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .popup-body  a{
     color: cyan;
 }
 .popup-body ul li{
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 /* services section */
