--- a/public/style.css
+++ b/public/style.css
@@ -410,7 +410,7 @@ body.loaded #loadingScreen {
         flex-direction: column;
         align-items: center;
         padding: 60px 10px;
-       background: lightslate
+             background: linear-gradient(359deg, #FF7043, #6610f2);
         color: #fff;
     }
     .profile-pic img {
